[package]
name = "nan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
tokio = { version = "1.34", features = [] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }

mage-core = { path = "../mage-core" }
